cmake_minimum_required(VERSION 3.20)
project(LeetCode_Solutions)

set(CMAKE_CXX_STANDARD 17)

add_executable(two_sum "Easy/0001-Two-Sum/solution.cpp")
add_executable(palindrome_number "Easy/0009-Palindrome-Number/solution.cpp")
add_executable(roman_to_integer "Easy/0013-Roman-to-Integer/solution.cpp")
add_executable(longest_common_prefix "Easy/0014-Longest-Common-Prefix/solution.cpp")
add_executable(valid_parentheses "Easy/0020-Valid-Parentheses/solution.cpp")
add_executable(merge_two_sorted_lists "Easy/0021-Merge-Two-Sorted-Lists/solution.cpp")
add_executable(remove_duplicates_from_sorted_array "Easy/0026-Remove-Duplicates-from-Sorted-Array/solution.cpp")