cmake_minimum_required(VERSION 3.20)
project(LeetCode_Solutions)

set(CMAKE_CXX_STANDARD 17)

add_executable(two_sum "Easy/0001-Two-Sum/solution.cpp")
add_executable(palindrome_number "Easy/0009-Palindrome-Number/solution.cpp")
add_executable(roman_to_integer "Easy/0013-Roman-to-Integer/solution.cpp")
add_executable(longest_common_prefix "Easy/0014-Longest-Common-Prefix/solution.cpp")
add_executable(valid_parentheses "Easy/0020-Valid-Parentheses/solution.cpp")
add_executable(merge_two_sorted_lists "Easy/0021-Merge-Two-Sorted-Lists/solution.cpp")
add_executable(remove_duplicates_from_sorted_array "Easy/0026-Remove-Duplicates-from-Sorted-Array/solution.cpp")
add_executable(remove_elements "Easy/0027-Remove-Elemente/solution.cpp")
add_executable(find_the-index_of_the_first_occurence_in_the_string "Easy/0028-Find-The-Index-Of-The-First-Occurence-In-The-String./solution.cpp")
add_executable(search_insert_position "Easy/0035-Search-Insert-Position./solution.cpp")
add_executable(length_of_last_word "Easy/0058-Length-of-Last-Word./solution.cpp")
add_executable(plus_one "Easy/0066-Plus-One./solution.cpp")
add_executable(add-binary "Easy/0067-Add-Binary/solution.cpp")
add_executable(sqrt "Easy/0069-sqrt/solution.cpp")
add_executable(climbing_stairs "Easy/0070-Climbing-Stairs/solution.cpp")
add_executable(remove_duplicates_from_sorted_list "Easy/0083-Remove-Duplicates-from-Sorted-List/solution.cpp")


